--- a/ProjectManager/ProjectManager.csproj
+++ b/ProjectManager/ProjectManager.csproj
@@ -51,20 +51,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CreateProjectCommand.cs" />
+    <Compile Include="Commands\CreateTaskCommand.cs" />
     <Compile Include="EnginePRovider.cs" />
-    <Compile Include="ICommand.cs" />
-    <Compile Include="CreationalCommands.cs" />
-    <Compile Include="CommandsFactory.cs" />
+    <Compile Include="Commands\Contracts\ICommand.cs" />
+    <Compile Include="Commands\CreateUserCommand.cs" />
+    <Compile Include="Commands\CommandsFactory.cs" />
     <Compile Include="ListingCommands.cs" />
-    <Compile Include="Common\UserValidationException.cs" />
-    <Compile Include="Validator.cs" />
+    <Compile Include="Common\Exceptions\UserValidationException.cs" />
+    <Compile Include="Common\Providers\Validator.cs" />
     <Compile Include="Data\Database.cs" />
     <Compile Include="IProject.cs" />
     <Compile Include="ModelsFactory.cs" />
     <Compile Include="Data\IDatabase.cs" />
-    <Compile Include="Project.cs" />
-    <Compile Include="Task.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\Task.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -89,6 +91,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Documentation.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\Abstract\" />
+    <Folder Include="Models\Contracts\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
