--- a/ProjectManager/ProjectManager.csproj
+++ b/ProjectManager/ProjectManager.csproj
@@ -51,31 +51,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\Contracts\ICommandFactory.cs" />
     <Compile Include="Commands\CreateProjectCommand.cs" />
     <Compile Include="Commands\CreateTaskCommand.cs" />
-    <Compile Include="EnginePRovider.cs" />
     <Compile Include="Commands\Contracts\ICommand.cs" />
     <Compile Include="Commands\CreateUserCommand.cs" />
     <Compile Include="Commands\CommandsFactory.cs" />
-    <Compile Include="ListingCommands.cs" />
+    <Compile Include="Commands\ListingCommands.cs" />
+    <Compile Include="Commands\ListProjectDetails.cs" />
+    <Compile Include="Common\Constrants\ICommandProcessor.cs" />
+    <Compile Include="Common\Constrants\ILogger.cs" />
+    <Compile Include="Common\Constrants\IReader.cs" />
+    <Compile Include="Common\Constrants\IValidator.cs" />
+    <Compile Include="Common\Constrants\IWriter.cs" />
     <Compile Include="Common\Exceptions\UserValidationException.cs" />
+    <Compile Include="Common\Providers\ConsoleReader.cs" />
+    <Compile Include="Common\Providers\ConsoleWriter.cs" />
     <Compile Include="Common\Providers\Validator.cs" />
     <Compile Include="Data\Database.cs" />
-    <Compile Include="IProject.cs" />
-    <Compile Include="ModelsFactory.cs" />
+    <Compile Include="Models\Contracts\IModelsFactory.cs" />
+    <Compile Include="Models\Contracts\ITask.cs" />
+    <Compile Include="Models\Contracts\IUser.cs" />
+    <Compile Include="Models\Enums\ProjectState.cs" />
+    <Compile Include="Models\Enums\TaskState.cs" />
+    <Compile Include="Models\Contracts\IProject.cs" />
+    <Compile Include="Models\ModelsFactory.cs" />
     <Compile Include="Data\IDatabase.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Engine.cs" />
+    <Compile Include="Core\Engine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Common\CommandProcessor.cs" />
-    <Compile Include="Common\FileLogger.cs" />
+    <Compile Include="Common\Providers\CommandProcessor.cs" />
+    <Compile Include="Common\Providers\FileLogger.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -92,9 +105,6 @@
   <ItemGroup>
     <Content Include="Documentation.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\Abstract\" />
-    <Folder Include="Models\Contracts\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
